@@ -356,11 +356,11 @@ namespace MonoDevelop.GtkCore.GuiBuilder
 				if (p != null)
 					path = p.GetOutputFileName (IdeApp.Workspace.ActiveConfiguration);
 			} else if (pref.ReferenceType == ReferenceType.Assembly) {
-				// Assume everything is a widget library. Stetic will discard it if it is not.
 				path = pref.Reference;
 			} else if (pref.ReferenceType == ReferenceType.Gac) {
-				// Use the assembly name. It will be resolved later to a file.
-				path = pref.Reference;
+				path = Runtime.SystemAssemblyService.GetAssemblyLocation (pref.Reference);
+				if (path == null)
+					path = pref.Reference;
 			}
 			if (path != null && GuiBuilderService.SteticApp.IsWidgetLibrary (path))
 				return path;
